--- a/bib.bib
+++ b/bib.bib
@@ -8965,3 +8965,14 @@ the Simulated Greenland Surface Mass Balance},
   year={1999},
   publisher={Wiley Online Library}
 }
+
+@article{TETAL2018CD,
+  title={The atmospheric hydrologic cycle in the ACME v0. 3 model},
+  author={Terai, Christopher R and Caldwell, Peter M and Klein, Stephen A and Tang, Qi and Branstetter, Marcia L},
+  journal={Climate dynamics},
+  volume={50},
+  number={9-10},
+  pages={3251--3279},
+  year={2018},
+  publisher={Springer}
+}
