--- a/resolution.tex
+++ b/resolution.tex
@@ -40,7 +40,7 @@ It is well known that the magnitude of vertical velocities increase with resolut
 \end{equation}
 where $n$ is the power law exponent. 
 
-\cite{RETAL2016CD} derive an estimate $n= b-1$ by combining a scale analysis of the continuity equation with a power law representation $\Delta x^{2b}$ of the second-order structure function of the horizontal wind. Strictly speaking, $\Delta x$ here refers to the distance between two points for which the velocity increment is computed in the structure function, but with this distance set to the model grid-spacing. Observations indicate that $b=\frac{1}{3}$ for scales less than about $1000$ km \citep{CETAL1999JGR}, which according to the Weiner–Khinchin theorem $- \left( 2b+1 \right) = -\frac{5}{3}$ is equal to the slope of the kinetic energy spectrum for mesoscale motions \citep{NG1985JAS}. \cite{RETAL2016CD} argue that the $-\frac{5}{3}$ slope is common in both observations and models, and provides an emergent constraint for $n= -\frac{2}{3}$.
+\cite{RETAL2016CD} derive an estimate $n= b-1$ by combining a scale analysis of the continuity equation with a power law representation $\Delta x^{2b}$ of the second-order structure function of the horizontal wind. Strictly speaking, $\Delta x$ here refers to the distance between two points for which the velocity increment is computed in the structure function, but with this distance set to the model grid-spacing. Observations indicate that $b=\frac{1}{3}$ for scales less than about $1000$ km \citep{CETAL1999JGR}, which according to the Weiner–Khinchin theorem $- \left( 2b+1 \right) = -\frac{5}{3}$ is equal to the slope of the kinetic energy spectrum for mesoscale motions \citep{NG1985JAS}. \cite{RETAL2016CD} argue that the $-\frac{5}{3}$ slope is common in both observations and models, and provides an emergent constraint for $b=\frac{1}{3}$ and $n= -\frac{2}{3}$.
 
 In large-eddy simulations, the sensitivity of vertical velocities to resolution is adequately explained by a scale analysis of the dynamical equations \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}. For hydrostatic scales relevant to AGCMs, a scale analysis of the Poisson equation gives $W \propto D^{-1}$, where $D$ is the horizontal scale of a buoyancy perturbation driving vertical motion \citep{HR2018JAMES}. In CAM aqua-planet simulations, the largest source of buoyancy is from grid-scale cloud formation, whose horizontal extents are set by the effective resolution of the model (i.e., some multiple of $\Delta x$), indicating $n=-1$ \citep{HR2018JAMES}. \cite{HR2017JCLIM} has shown that the $n=-1$ scaling does not explain the behavior of CAM4 in a convergence experiment, but follow-up studies \citep{HR2018JAMES,HETAL2019JAMES} indicate that the inadequacy of the $n=-1$ scaling is not definitive due to time-truncation errors associated with fixing the physics time-step ($\Delta t_{phys}$) across resolutions in that study.
 
@@ -184,7 +184,7 @@ To understand the degree to which atmospheric stability in the deep tropics is d
 
 Figure~\ref{fig:cape}b shows that fractional area of air columns in the deep tropics that are predominantly subsiding (ascending) changes drastically with resolution, from $0.32$ ($0.68$) in the $ne20$ ($\Delta x = 166.8$ km) run, and monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in the $ne120$ ($\Delta x = 27.8$ km) run. Interestingly, the sum of the product of the fractional areas with their corresponding CAPE values gives approximately the same CAPE values computed from the mean temperature and moisture profiles over the entire deep tropics (Figure~\ref{fig:cape}a). This provides strong evidence that CAPE values in the deep tropics are decreasing with resolution because a larger (smaller) space-time fraction of the deep tropics are made up of predominantly subsiding (ascending) grid columns with increasing resolution.
 
-Poleward of the deep tropics and within the subtropics, the logistic regression indicates that subsidence is a poor predictor of $FREQZM$ (Figure~\ref{fig:4zonal}a,b). The R-value decreases to a local minimum between $15^{\circ} - 20^{\circ}$ latitude, and the magnitude of the sensitivity parameter steeply declines. The local minimum in the R-value corresponds with a local maximum in the latent heat fluxes (Figure~\ref{fig:4rzonal}c), indicating that the boundary layer is being driven unstable by large surface latent heat fluxes. The CAPE values in the $10^{\circ} - 15^{\circ}$ latitude region are likely to be small, since the ZM precipitation rate consists primarily of drizzle (Figure~\ref{fig:4zonal}d). The predominance of drizzle in this region is probably a result of the large subsiding motion in the subtropics (not shown) constraining CAPE from becoming too large. AGCMs are known to suffer from an excess drizzle bias in precisely this region \citep{D2006JCLIM}, and this analysis indicates that this bias is due to the use of a CAPE trigger function.
+Poleward of the deep tropics and within the subtropics, the logistic regression indicates that subsidence is a poor predictor of $FREQZM$ (Figure~\ref{fig:4zonal}a,b). The R-value decreases to a local minimum between $15^{\circ} - 20^{\circ}$ latitude, and the magnitude of the sensitivity parameter steeply declines. The local minimum in the R-value corresponds with a local maximum in the latent heat fluxes (Figure~\ref{fig:4rzonal}c), indicating that the boundary layer is being driven unstable by large surface latent heat fluxes. The CAPE values in the $10^{\circ} - 15^{\circ}$ latitude region are likely to be small, since the ZM precipitation rate consists primarily of drizzle (Figure~\ref{fig:4zonal}d), discussed in \cite{TETAL2018CD}. The predominance of drizzle in this region is probably a result of the large subsiding motion in the subtropics (not shown) constraining CAPE from becoming too large. AGCMs are known to suffer from an excess drizzle bias in precisely this region \citep{D2006JCLIM}, and this analysis indicates that this bias is due to the use of a CAPE trigger function.
 
 \ack This class file was developed by Sunrise Setting Ltd,
 Paignton, Devon, UK. Website:\\
