--- a/bib.bib
+++ b/bib.bib
@@ -8976,3 +8976,35 @@ the Simulated Greenland Surface Mass Balance},
   year={2018},
   publisher={Springer}
 }
+
+@article{PS2002CD,
+  title={The processes governing horizontal resolution sensitivity in a climate model},
+  author={Pope, V and Stratton, R},
+  journal={Climate Dynamics},
+  volume={19},
+  number={3-4},
+  pages={211--236},
+  year={2002},
+  publisher={Springer}
+}
+
+@article{DETAL2003CD,
+  title={High-resolution simulations of global climate, part 1: present climate},
+  author={Duffy, PB and Govindasamy, B and Iorio, JP and Milovich, J and Sperber, KR and Taylor, KE and Wehner, MF and Thompson, SL},
+  journal={Climate Dynamics},
+  volume={21},
+  number={5-6},
+  pages={371--390},
+  year={2003},
+  publisher={Springer}
+}
+
+@article{BK2010JGR,
+  title={Impact of horizontal resolution on climate model forecasts of tropical precipitation and diabatic heating for the TWP-ICE period},
+  author={Boyle, James and Klein, Stephen A},
+  journal={Journal of Geophysical Research: Atmospheres},
+  volume={115},
+  number={D23},
+  year={2010},
+  publisher={Wiley Online Library}
+}
